airDustData.js 추가, 메뉴 바 애니메이션 추가

--- a/src/main/resources/static/CSS/common.css
+++ b/src/main/resources/static/CSS/common.css
@@ -52,6 +52,20 @@ button {
 	display: none;
 }
 
+.hiddenAni {
+	display: none;
+	animation-name: hiddenAnimation;
+	animation-duration: 1s;
+}
+@keyframes hiddenAnimation {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
 /* 전체 영역 */
 .mainArea {
 	display: flex;
