--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -31,8 +31,8 @@
 					<div
 						id="menuBarArea"
 						class="menuBarArea"
-						onmouseover="mouseoverMenuBar(), showMenuBar()"
-						onmouseout="mouseoutMenuBar(), hideMenuBar()"
+						onmouseover="mouseoverMenuBar(), showMenuBar(),showVisitor()"
+						onmouseout="mouseoutMenuBar(), hideMenuBar(),showVisitor()"
 					>
 						<!-- 날씨 버튼 -->
 						<div
@@ -53,7 +53,7 @@
 						<!-- 방사능 버튼 -->
 						<div
 							id="radioBtn"
-							class="hidden"
+							class="hiddenAni"
 							onclick="selectRadioBtn(event), radioAction(),eqClose()"
 						>
 							<img
@@ -69,7 +69,7 @@
 						<!-- 지진 버튼 -->
 						<div
 							id="eqBtn"
-							class="hidden"
+							class="hiddenAni"
 							onclick="selectEQBtn(event), eqAction(), radioClose()"
 						>
 							<img
@@ -86,12 +86,12 @@
 						</div>
 
 						<!-- 방문자 수 -->
-						<!-- 코드 완성 후 class를 'visitCountArea'로 바꿀 예정. -->
-						<div class="visitCount">
+						<div id="visitCountArea" class="hidden">
+							<!-- 누적 방문자 수 -->
 							<div class="totalVisit">
 								누적 방문자: <span th:text="${post.post}"></span>명
 							</div>
-							<!-- 오늘 방문자 수 완성 됐을 시 작성 -->
+							<!-- 오늘 방문자 수 -->
 							<div class="todayVisit">
 								오늘 방문자: <span th:text="${post.dailyPost}"></span>명
 							</div>
@@ -108,7 +108,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">안전</span>
+							<span class="markerInfo_radioScale">안전</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -118,7 +118,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">관심</span>
+							<span class="markerInfo_radioScale">관심</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -128,7 +128,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">위험</span>
+							<span class="markerInfo_radioScale">위험</span>
 						</div>
 					</div>
 
