--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -198,6 +198,7 @@
 	</script>
 
 	<script src="../JS/kakaoMap.js"></script>
+	<script src="../JS/weatherData.js"></script>
 	<script src="../JS/radioData.js"></script>
 	<script src="../JS/eqData.js"></script>
 	<script src="../JS/button.js"></script>
