--- a/src/main/resources/templates/test/testpinmap.html
+++ b/src/main/resources/templates/test/testpinmap.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="contourMap" style="display: none;"></div>
 	<div id="map" style="width: 100%; height: 350px"></div>
-	<button type="button" onclick="weather()">ㅁㄴㅇㄹ</button>
+	<button type="button" onclick="weather()">날씨검색</button>
 	<form action="/test" method="post">
 		<input type="text" name="id" id="id" />
 		<button type="button" onclick="idtest()">비동기id호출</button>
@@ -36,7 +36,6 @@
 	<div id="container"></div>
 
 	<img src="test2" alt="">
-
 
 </body>
 
@@ -97,15 +96,52 @@
 <script>
 	const weather = async () => {
 
-		let base_date = '20231029';
-		let base_time = '1600'
-		let nx = '60'//서울특별시
-		let ny = '127'//서울특별시
-		const data = await fetch(`https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getUltraSrtNcst?serviceKey=YyVdtivuQmwFOj1yZVtSmLQmIbuLGIBYB3xuDJajCAFnz%2F%2BdBdgrPstXhVdn1HfaoA01mXG5kcKx%2BsTMGLii0Q%3D%3D&pageNo=1&numOfRows=1000&dataType=json&base_date=${base_date}&base_time=${base_time}&nx=${nx}&ny=${ny}
-`);
-		const weatherJson = await data.json();
+		const now = new Date();
+		let year = now.getFullYear();
+		let month = now.getMonth() + 1;
+		let date = now.getUTCDate();
+		let hours = now.getHours() - 1;
+		let min = now.getMinutes();
+		if (min >= 45) min = '30'
+		else if (min >= 15) min = '00'
+		else min = '30'
 
-		console.log(weatherJson)
+		let base_date = String(year) + String(month) + String(date);
+		let base_time = String(hours) + min
+
+		const location = [
+			[60, 127, '서울', 126.980008333333, 37.5635694444444],
+			[98, 76, '부산', 129.076952777777, 35.1770194444444],
+			[89, 90, '대구', 128.603552777777, 35.8685416666666],
+			[55, 124, '인천', 126.707352777777, 37.4532333333333],
+			[58, 74, '광주', 126.853363888888, 35.1569749999999],
+			[67, 100, '대전', 127.386566666666, 36.3471194444444],
+			[102, 84, '울산', 129.313688888888, 35.5354083333333],
+			[60, 120, '경기', 127.011688888888, 37.2718444444444],
+			[69, 107, '충북', 127.493586111111, 36.6325],
+			[68, 100, '충남', 127.422955555555, 36.3238722222222],
+			[63, 89, '전북', 127.111052777777, 35.817275],
+			[51, 67, '전남', 126.465, 34.8130444444444],
+			[89, 91, '경북', 128.602766666666, 35.8896055555555],
+			[91, 77, '경남', 128.694166666666, 35.2347361111111],
+			[52, 38, '제주', 126.500333333333, 33.4856944444444],
+			[73, 134, '강원', 127.731975, 37.8826916666666]]
+
+		for (let i = 0; i < location.length; i++) {
+
+			let nx = location[i][0]
+			let ny = location[i][1]
+
+
+			const data = await fetch(`https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getUltraSrtNcst?serviceKey=YyVdtivuQmwFOj1yZVtSmLQmIbuLGIBYB3xuDJajCAFnz%2F%2BdBdgrPstXhVdn1HfaoA01mXG5kcKx%2BsTMGLii0Q%3D%3D&pageNo=1&numOfRows=1000&dataType=json&base_date=${base_date}&base_time=${base_time}&nx=${nx}&ny=${ny}`);
+
+			const weatherJson = await data.json();
+
+			console.log(weatherJson.response.body.items.item[3].category)
+			console.log(weatherJson.response.body.items.item[3].obsrValue)
+
+		}
+
 
 	}
 
