날씨 지도 완성, 시간 입력 문제 해결 중

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -56,7 +56,7 @@
 						<div
 							id="radioBtn"
 							class="hiddenAni"
-							onclick="selectRadioBtn(event), radioAction(),weatherAction(), eqClose()"
+							onclick="selectRadioBtn(event), radioAction(),weatherClose(), eqClose()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
@@ -72,7 +72,7 @@
 						<div
 							id="eqBtn"
 							class="hiddenAni"
-							onclick="selectEQBtn(event), eqAction(),weatherAction(), radioClose()"
+							onclick="selectEQBtn(event), eqAction(),weatherClose(), radioClose()"
 						>
 							<img
 								src="../img/icon_earthquake.png"
