메뉴바 세로 사이즈 조정

--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -1,7 +1,7 @@
 /* 메뉴 바 영역 */
 .menuBarArea {
 	width: 185px;
-	height: 8.5%;
+	height: 82px;
 	background-color: #5ea8c8e1;
 	/* #5ea8c8e1 */
 	border-radius: 10px;
