--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -192,7 +192,8 @@
 
 			const bar = document.querySelector(".menuBarArea");
 
-			bar.style.height = `${0.085 * parseInt(map.style.height)}px`;
+			bar.style.height = "82px";
+			// bar.style.height = `${0.085 * parseInt(map.style.height)}px`;
 			console.log(`브라우저 세로 길이: ${bar.style.height}`);
 		});
 	</script>
