그래프 버튼 메뉴바에 추가

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -82,6 +82,20 @@
 							<button class="menu">지진</button>
 						</div>
 
+						<!-- 그래프 버튼 -->
+						<div
+							id="eqGraBtn"
+							class="hiddenAni"
+							onclick="selectEQBtn(event), eqGraAction(),eqClose(),weatherClose(), radioClose()"
+						>
+							<img
+								src="../img/icon_earthquake.png"
+								alt="noGraphBtnImg"
+								class="radioBtnImg"
+							/>
+							<button class="menu">그래프</button>
+						</div>
+
 						<!-- 확장 아이콘 -->
 						<div id="iconExpandArea" class="iconExpandArea">
 							<img src="../img/icon_expand.png" alt="noIconExpand" />
