--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -14,7 +14,7 @@
 		<!-- 전체 영역 -->
 		<div class="mainArea">
 			<!-- ContourMap출력영역(안보임) -->
-			<!-- <div id="contourMap" style="display: none"></div> -->
+			<div id="contourMap" style="display: none"></div>
 			<!-- header 영역 -->
 			<div class="headerArea">
 				<div
@@ -40,7 +40,7 @@
 						<div
 							id="weatherBtn"
 							class="selectedBtn"
-							onclick="selectWeatherBtn(event), weatherAction(), radioClose(),eqClose()"
+							onclick="selectWeatherBtn(event), weatherAction(), radioClose(),eqClose(), eqGraClose()"
 						>
 							<img
 								src="../img/icon_weather2.png"
@@ -56,7 +56,7 @@
 						<div
 							id="radioBtn"
 							class="hiddenAni"
-							onclick="selectRadioBtn(event), radioAction(),weatherClose(), eqClose()"
+							onclick="selectRadioBtn(event), radioAction(),weatherClose(), eqClose(),eqGraClose()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
@@ -72,7 +72,7 @@
 						<div
 							id="eqBtn"
 							class="hiddenAni"
-							onclick="selectEQBtn(event), eqAction(),weatherClose(), radioClose()"
+							onclick="selectEQBtn(event), eqAction(),weatherClose(), radioClose(),eqGraClose()"
 						>
 							<img
 								src="../img/icon_earthquake.png"
@@ -86,7 +86,13 @@
 						<div
 							id="eqGraBtn"
 							class="hiddenAni"
-							onclick="selectEQBtn(event), eqGraAction(),eqClose(),weatherClose(), radioClose()"
+							onclick="
+							selectEQGraBtn(event), 
+							eqGraAction(),
+							weatherClose(), 
+							eqClose(), 
+							radioClose()
+							"
 						>
 							<img
 								src="../img/icon_earthquake.png"
