--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -40,7 +40,7 @@
 						<div
 							id="weatherBtn"
 							class="selectedBtn"
-							onclick="selectWeatherBtn(event), weatherAction(), radioClose(),eqClose(), eqGraClose()"
+							onclick="selectWeatherBtn(event), weatherAction(), eqClose()"
 						>
 							<img
 								src="../img/icon_weather2.png"
@@ -56,7 +56,7 @@
 						<div
 							id="radioBtn"
 							class="hiddenAni"
-							onclick="selectRadioBtn(event), radioAction(),weatherClose(), eqClose(),eqGraClose()"
+							onclick="selectRadioBtn(event), radioAction(),weatherClose(), eqClose()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
@@ -72,7 +72,7 @@
 						<div
 							id="eqBtn"
 							class="hiddenAni"
-							onclick="selectEQBtn(event), eqAction(),weatherClose(), radioClose(),eqGraClose()"
+							onclick="selectEQBtn(event), eqAction(),weatherClose(), radioClose()"
 						>
 							<img
 								src="../img/icon_earthquake.png"
@@ -81,25 +81,19 @@
 							/>
 							<button class="menu">지진</button>
 						</div>
-
-						<!-- 그래프 버튼 -->
-						<div
-							id="eqGraBtn"
-							class="hiddenAni"
-							onclick="
-							selectEQGraBtn(event), 
-							eqGraAction(),
-							weatherClose(), 
-							eqClose(), 
-							radioClose()
-							"
-						>
-							<img
-								src="../img/icon_earthquake.png"
-								alt="noGraphBtnImg"
-								class="radioBtnImg"
-							/>
-							<button class="menu">그래프</button>
+						<div>
+							<select name="year" id="eqYearMenu">
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+								<option value=""></option>
+							</select>
 						</div>
 
 						<!-- 확장 아이콘 -->
