--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -81,20 +81,21 @@
 							/>
 							<button class="menu">지진</button>
 						</div>
-						<div>
+						<!-- <div class="eqYearArea">
 							<select name="year" id="eqYearMenu">
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
-								<option value=""></option>
+								<option value="2023">2023년</option>
+								<option value="2021">2022년</option>
+								<option value="2022">2021년</option>
+								<option value="2020">2020년</option>
+								<option value="2019">2019년</option>
+								<option value="2018">2018년</option>
+								<option value="2017">2017년</option>
+								<option value="2016">2016년</option>
+								<option value="2015">2015년</option>
+								<option value="2014">2014년</option>
+								<option value="2013">2013년</option>
 							</select>
-						</div>
+						</div> -->
 
 						<!-- 확장 아이콘 -->
 						<div id="iconExpandArea" class="iconExpandArea">
