--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -158,7 +158,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">진도 0 ~ 2 미만</span>
+							<span class="markerInfo_eqScale">규모 0 ~ 2 미만</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -168,7 +168,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">진도 2.1 ~ 3 미만</span>
+							<span class="markerInfo_eqScale">규모 2.1 ~ 3 미만</span>
 						</div>
 						<div class="markerInfo">
 							<span>
@@ -178,7 +178,7 @@
 									class="markerInfoImg"
 								/>
 							</span>
-							<span class="markerInfo_eqScale">진도 3 이상</span>
+							<span class="markerInfo_eqScale">규모 3 이상</span>
 						</div>
 					</div>
 				</div>
